fix z-index search popup

--- a/public/styles/search-filter.css
+++ b/public/styles/search-filter.css
@@ -1,6 +1,7 @@
 /* search filter */
 #search-filter-popup {
     width: auto;
+    z-index: 1000;
 }
 
 .search-filter-header {
